# rocket_league_2

./: .gitignore  ADVANCED_REWARD_SYSTEM.md  INSTALL_SB3.md  LICENSE  README-2.md  README.md  README_SB3_INTEGRATION.md  TouchBall1.py  ai_testing_node.py  ai_training_node.py  ai_training_testing_onefile.py  analyze_rewards.py  event.py  main.py  perception.py  requirements.txt  setup.py  simulator.py  test_advanced_rewards.py  test_sb3_fix.py  train_high_rewards.py
advanced_eval_logs/: evaluations.npz  monitor.csv
advanced_logs/: monitor.csv
advanced_tensorboard/advanced_rocket_league_1/: events.out.tfevents.1761345833.pal-nat186-81-165.itap.purdue.edu.37379.1
advanced_tensorboard/advanced_rocket_league_2/: events.out.tfevents.1761346483.pal-nat186-81-165.itap.purdue.edu.38095.1
examples/: quick_start_training.py  ros_integration_example.py
logs/: eval.monitor.csv  monitor.csv
logs/eval_logs/: evaluations.npz
models/: training_config.json
quick_start_logs/: monitor.csv
quick_start_tensorboard/PPO_1/: events.out.tfevents.1761345688.pal-nat186-81-165.itap.purdue.edu.36647.0
rktl_autonomy/: package.xml  setup.py  train_sb3.py
rktl_autonomy/rktl_autonomy/: agent.py  bridge.py  (+9 more)
rktl_cars/: package.xml  setup.cfg  setup.py
rktl_interfaces/: CMakeLists.txt  package.xml  setup.cfg  setup.py
rktl_perception/: rl_perception_base.ipynb  rl_perception_base.py
rktl_sim/: package.xml  setup.py  simulator.py
rktl_sim/rktl_sim/: simulator.py  simulatorPoint.py  testing_subscriber.py  testing_subscriber2.py
rktl_simulator/: package.xml  setup.cfg  setup.py
rktl_simulator/rktl_simulator/: deled.py  simulator.py  simulatorPoint.py  singleMessage.py  testingSimPoint.py
(+23 files in other folders)
