<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rktl_simulator</name>
  <version>1.0.0</version>
  <description>Creates a simulated environment to train the AI on vehicle handling and the rules of soccer.</description>
  <maintainer email="sixfootsix50@gmail.com">sixfootsix50</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rktl_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
